# magpie

./: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSES  README.md  build_externals.sh
cmake/: FindQhull.cmake
cmake/plists/: InfoBZ.plist  InfoCif2Xml.plist  InfoMagDyn.plist  InfoMagStructFact.plist
examples/: helix.magpie
examples_py/: altermagnetic_MnTe.py  calc_dispersion.py  calc_dispersion_surface.py  ferromagnetic2.py  load_model.py  tst_magpy.py
libs/: defs.h  loadcif.h  magffacts.h  rnd.h  symops.h  vers.h
setup/cmake/: FindMinuit2.cmake  FindQCP.cmake
setup/deb/: magpie.desktop  mk.sh
setup/mingw/: mk.sh  setup.sh
setup/osx/: Info.plist  InfoBZ.plist  InfoCif2Xml.plist  InfoFindSG.plist  InfoMagDyn.plist  InfoMagStructFact.plist  InfoPlot2D.plist  InfoPlot3D.plist  InfoStructFact.plist  depends.py  mk.sh
setup/plists/: InfoBZ.plist  InfoFindSG.plist  InfoMagDyn.plist  InfoMagStructFact.plist  InfoStructFact.plist
tests/: magffacts.cpp
tlibs2/: .gitignore
tlibs2/build_scripts/: build_dmg.sh
tlibs2/libs/: algos.h  cam.h  expr.h  file.h  fit.h  h5file.h  instr.h  magdyn.h  magsg.h  maths.h  phys.h  str.h  traits.h  units.h  ver.h  voronoi.h
tlibs2/libs/instr/: base.h  base_loader.h  frm.h  macs.h  psi.h  raw.h  tax.h  trisp.h
tlibs2/libs/magdyn/: checks.h  configuration.h  correlation.h  diff.h  dispersion.h  file.h  generators.h  getters.h  groundstate.h  hamilton.h  helpers.h  magdyn.h  polarisation.h  powder.h  precalc.h  structs.h  topology.h
tlibs2/libs/maths/: complex.h  constants.h  containers.h  coordtrafos.h  decls.h  diff.h  fourier.h  funcs.h  interp.h  lapack.h  ndim.h  operators.h  polygon.h  projectors.h  qhull.h  quaternion.h  rtree.h  scalar.h  solids.h  statistics.h  tensor.h  threedim.h
tlibs2/libs/qt/: gl.cpp  gl.h  glplot.cpp  glplot.h  helper.h  numerictablewidgetitem.h  recent.cpp  recent.h
tlibs2/libs_c/: list.c  list.h  mathlib.c  mathlib.h
tlibs2/script/: CMakeLists.txt
tlibs2/tests/: closest.cpp  fract.cpp  h5camdet.cpp  magdyn_powder.cpp  nonrecip.cpp  stoval.cpp
tlibs2/tools/plot2d/: CMakeLists.txt  defs.cpp  defs.h  main.cpp  plot2d.cpp  plot2d.h
tlibs2/tools/plot3d/: CMakeLists.txt  defs.cpp  defs.h  main.cpp  plot3d.cpp  plot3d.h  plot3d_calc.cpp  plot3d_file.cpp  plot3d_grid.cpp  plot3d_render.cpp
tlibs2/tools/script/: CMakeLists.txt
tlibs2/tools/script/src/: llasm.cpp
tlibs2/unittests/: CMakeLists.txt  leastsq.cpp  magdyn.cpp  magdyn2.cpp  ode.cpp  proj.cpp
tools/bz/: CMakeLists.txt  bz.cpp  bz.h  bz_calc.cpp  bz_conf.cpp  bz_conf.h  bz_file.cpp  bz_formulas.cpp  bz_lib.cpp  bz_lib.h  bz_main.cpp  bz_ops.cpp  globals.cpp  globals.h  plot.cpp  plot.h  plot_cut.cpp  plot_cut.h
tools/cif2xml/: CMakeLists.txt  cif2xml.cpp  findsg.cpp  symops.cpp
tools/magdyn/: CMakeLists.txt  config.cpp  defs.cpp  defs.h  dialogs.cpp  dispersion.cpp  export.cpp  export_sqe.cpp  file.cpp  gui_defs.h  healthcheck.cpp  kernel.cpp  magdyn.cpp  magdyn.h  main.cpp  main_gui.cpp  panels.cpp  structure.cpp  tables.cpp
tools/magdyn/dialogs/: assign.cpp  assign.h  diff.cpp  diff.h  dispersion3d.cpp  dispersion3d.h  dispersion3d_calc.cpp  dispersion3d_file.cpp  dispersion3d_plot.cpp  ffact.cpp  ffact.h  glinfos.cpp  glinfos.h  ground_state.cpp  ground_state.h  infos.cpp  infos.h  matrixelems.cpp  matrixelems.h  notes.cpp  notes.h  pol.cpp  pol.h  powder.cpp  powder.h  settings.h  struct_plot.cpp  struct_plot.h  table_import.cpp  table_import.h  topology.cpp  topology.h  trafos.cpp  trafos.h
tools/magdyn/export/: script.cpp  sqe.cpp  sunny.cpp  sw.cpp
tools/magdyn/panels/: coordinates.cpp  dispersion.cpp  environment.cpp  export.cpp  hamilton.cpp  reciprocal.cpp  sample.cpp  sites.cpp  terms.cpp  variables.cpp
tools/magdyn/scripts/: plot_dyn.py
tools/magdyn/startup/: benchmark.cpp  healthcheck.cpp  main.cpp  main_gui.cpp
tools/magdyn/widgets/: graph.cpp  graph.h  siteitem.h
tools/magsgbrowser/: CMakeLists.txt  main.cpp
tools/magsgbrowser/setup/: CMakeLists.txt  convmag.cpp
tools/magstructfact/: CMakeLists.txt
tools/moldyn/: CMakeLists.txt  moldyn.cpp  setup_mingw.sh
tools/scanbrowser/: CMakeLists.txt  main.cpp
tools/structfact/: CMakeLists.txt  magstructfact.cpp  magstructfact_file.cpp  magstructfact_main.cpp  magstructfact_nuclei.cpp  structfact.cpp  structfact_file.cpp  structfact_findsg.cpp  structfact_main.cpp
tools/test/: convert_ffacts.jl  convert_magffacts.jl  magffacts.cpp
tools_c/: CMakeLists.txt  magpie_c.cpp  magpie_c.h  test.c  test_calc_disp.c  test_save_disp.c
tools_c/tests/: .gitignore  build_instr.sh  calc_disp.c  save_disp.c  test.instr
tools_py/bz/: CMakeLists.txt  bzlib.i
tools_py/instr/: CMakeLists.txt  convert_data.py  instr.i  instrhelper.py  plot_data.py  tst_instr.py
tools_py/magdyn/: CMakeLists.txt  magdyn.i  magpy.i
tools_py/magdyn/tests/: ferromagnetic.py  ferromagnetic2.py  magpy.py  tst_magdyn.py  tst_magpy.py  tst_magpy2.py
